--- a/_config.yml
+++ b/_config.yml
@@ -18,24 +18,19 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Scott Esbrandt
+email: scott@scottesbrandt.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Technology changes all the time; human nature, hardly ever.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://www.scottesbrandt.com" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
+# twitter_username: jekyllrb
+github_username:  scott-es
 
 # Build settings
-#theme: minima
-#theme: jekyll-theme-hacker
-remote_theme: pages-themes/hacker@v0.2.0
+theme: minima
 plugins:
   - jekyll-feed
-  - jekyll-remote-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default.
