configure site url

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: scott@scottesbrandt.com
 description: >- # this means to ignore newlines until "baseurl:"
   Technology changes all the time; human nature, hardly ever.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://www.scottesbrandt.com" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 github_username:  scott-es
 
